--- a/spec/fixtures/vcr_cassettes/initial_model_refresh.yml
+++ b/spec/fixtures/vcr_cassettes/initial_model_refresh.yml
@@ -464,6 +464,12 @@ http_interactions:
               "object": "model",
               "created": 1725648979,
               "owned_by": "system"
+            },
+            {
+              "id": "gpt-4.1-nano",
+              "object": "model",
+              "created": 1725648979,
+              "owned_by": "system"
             }
           ]
         }
